# parquet-viewer

./: .gitignore  CLAUDE.md  Cargo.toml  Example.swift  Package.swift  README.md  README_Swift.md  build.sh  parquet_viewer.h  verify_arch.sh
.cargo/: config.toml
.swiftpm/xcode/xcuserdata/hengfeiyang.xcuserdatad/xcschemes/: xcschememanagement.plist
Frameworks/: ParquetViewer.swift  parquet_viewer.h
ParquetViewerDemo/: README.md  build.sh
ParquetViewerDemo/Frameworks/: ParquetViewer.swift
ParquetViewerDemo/ParquetViewerDemo/: ContentView.swift  DataView.swift  MetadataView.swift  ParquetViewerDemoApp.swift  SchemaView.swift  TableView.swift
ParquetViewerDemo/ParquetViewerDemo.xcodeproj/: .gitignore  project.pbxproj
ParquetViewerDemo/ParquetViewerDemo.xcodeproj/project.xcworkspace/xcuserdata/hengfeiyang.xcuserdatad/: UserInterfaceState.xcuserstate
ParquetViewerDemo/ParquetViewerDemo.xcodeproj/xcuserdata/hengfeiyang.xcuserdatad/xcschemes/: xcschememanagement.plist
Sources/ParquetViewerFFI/: ParquetViewerFFI.swift
Tests/ParquetViewerFFITests/: ParquetViewerFFITests.swift
Tests/ParquetViewerTests/: ParquetViewerTests.swift
src/: ffi.rs  lib.rs  main.rs
